@@ -80,13 +80,33 @@ tasks.withType(JavaCompile).configureEach {
 construo {
     name.set(projectName)
     humanName.set(projectName)
-    jarTask.set('shadowJar')
+    mainClass.set(application.mainClass)
     outputDir.set(rootProject.file('distribution'))
+
+    jlink {
+        modules.addAll(
+                'java.base',
+                'java.desktop',
+                'java.management',
+                'jdk.unsupported',
+                'jdk.zipfs'
+        )
+    }
+
+    roast {
+        vmArgs.addAll(
+                '--enable-native-access=ALL-UNNAMED',
+                '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
+                '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED'
+        )
+    }
 
     targets {
         create('winX64', io.github.fourlastor.construo.Target.Windows) {
             architecture.set(io.github.fourlastor.construo.Target.Architecture.X86_64)
-            jdkUrl.set('https://github.com/adoptium/temurin25-binaries/releases/download/jdk-25.0.2+10/OpenJDK25U-jdk_x64_windows_hotspot_25.0.2_10.zip')
+            jdkUrl.set('https://github.com/adoptium/temurin25-binaries/releases/download/jdk-25.0.2%2B10/OpenJDK25U-jdk_x64_windows_hotspot_25.0.2_10.zip')
+            useConsole.set(true)
         }
     }
 }
